--- a/RollingCoffe/src/App.css
+++ b/RollingCoffe/src/App.css
@@ -1,3 +1,12 @@
 .bg-green{
   background-color: #003c25;
 }
+
+#root{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.contenPrincipal{
+  flex-grow: 1;
+}
