--- a/RollingCoffe/src/App.css
+++ b/RollingCoffe/src/App.css
@@ -10,3 +10,16 @@
 .contenPrincipal{
   flex-grow: 1;
 }
+
+#contenError404{
+  display: flex;
+  /*flex-wrap: wrap;*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnError404{
+  width: 100px;
+  background-color: #003c25; /*!important;*/
+}
