--- a/RollingCoffe/src/App.css
+++ b/RollingCoffe/src/App.css
@@ -23,3 +23,13 @@
   width: 100px;
   background-color: #003c25; /*!important;*/
 }
+
+#contenBanner{
+  height: 5%;
+  width: 100%;
+}
+
+#imgBanner{
+  width: 100%;
+  object-fit: cover;
+}
