--- a/RollingCoffe/src/App.css
+++ b/RollingCoffe/src/App.css
@@ -27,15 +27,48 @@
 }
 
 #contenBanner{
-  height: 5%;
+  height: 500px;
   width: 100%;
 }
 
 #imgBanner{
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 .btnCard{
   background-color: #014d2f !important;
   border-color: #014d2f !important;
+}
+
+
+#contenDetalle{
+  border: 1px solid gray;
+  border-radius: 10px;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  
+  flex-direction: row;
+  justify-content:center;
+
+}
+#contenImgDetalle{
+  
+  width: 50%;
+  height: 400px;
+  
+}
+#imgDetalle{
+  
+  border-radius: 10px;
+  height: 100%;
+  
+   width: 100%;
+  /*height: 100%;
+  object-fit: cover;*/
+}
+#contenTextoDetalle{
+  text-align: justify;
+  width: 50%;
 }
