--- a/RollingCoffe/src/App.css
+++ b/RollingCoffe/src/App.css
@@ -41,34 +41,29 @@
   border-color: #014d2f !important;
 }
 
+.fila{
 
-#contenDetalle{
-  border: 1px solid gray;
-  border-radius: 10px;
-  width: 100%;
   height: 400px;
-  display: flex;
-  
-  flex-direction: row;
-  justify-content:center;
+  width: 100%;
+  /*border: 1px solid gray;*/
+  border-radius: 10px;
 
 }
-#contenImgDetalle{
-  
+
+.col{
   width: 50%;
   height: 400px;
   
 }
+.col p{
+  text-align: justify;
+}
+
 #imgDetalle{
   
   border-radius: 10px;
-  height: 100%;
   
-   width: 100%;
-  /*height: 100%;
-  object-fit: cover;*/
-}
-#contenTextoDetalle{
-  text-align: justify;
-  width: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
